--- a/index.html
+++ b/index.html
@@ -6,27 +6,80 @@
     <title>WOWOROOM | 首頁</title>
     <link rel="icon" href="./src/img/favicon.ico" type="image/x-icon" />
     <link rel="stylesheet" href="./src/output.css" />
-    <link rel="stylesheet" href="./src/all.css">
+    <link rel="stylesheet" href="./src/all.css" />
   </head>
   <body class="font-noto-sans">
     <header>
       <nav class="navbar">
-        <div class="container relative h-full flex justify-between items-center">
+        <div
+          class="container relative h-full flex justify-between items-center"
+        >
           <h1>
             <a href="#" class="text-xl lg:text-2xl font-extrabold">WOWOROOM</a>
           </h1>
-          <input type="checkbox" class="hidden" id="mobile_nav">
-          <label for="mobile_nav" class="label md:hidden w-10 h-10 relative cursor-pointer">
+          <input type="checkbox" class="hidden" id="mobile_nav" />
+          <label
+            for="mobile_nav"
+            class="label md:hidden w-10 h-10 relative cursor-pointer"
+          >
             <div class="line"></div>
           </label>
-          <ul class="menu transition-all duration-700 max-h-0 md:max-h-20 lg:max-h-[100px] overflow-hidden md:flex absolute top-[60px] md:top-0 left-0 md:left-auto right-0">
-            <li class="menu-btn text-white md:text-black"><a href="#" class="menu-link">床墊優勢</a></li>
-            <li class="menu-btn text-white md:text-black"><a href="#" class="menu-link">好評推薦</a></li>
-            <li class="menu-btn text-white md:text-black"><a href="#" class="menu-link">運送方式</a></li>
-            <li class="menu-btn text-purple-F8"><a href="#" class="menu-link">立即預訂</a></li>
+          <ul
+            class="menu transition-all duration-700 max-h-0 md:max-h-20 lg:max-h-[100px] overflow-hidden md:flex absolute top-[60px] md:top-0 left-0 md:left-auto right-0"
+          >
+            <li class="menu-btn text-white md:text-black">
+              <a href="#" class="menu-link">床墊優勢</a>
+            </li>
+            <li class="menu-btn text-white md:text-black">
+              <a href="#" class="menu-link">好評推薦</a>
+            </li>
+            <li class="menu-btn text-white md:text-black">
+              <a href="#" class="menu-link">運送方式</a>
+            </li>
+            <li class="menu-btn text-purple-F8">
+              <a href="#" class="menu-link">立即預訂</a>
+            </li>
           </ul>
         </div>
       </nav>
     </header>
+    <main>
+      <section class="banner mt-4 md:mt-6 lg:mt-8 section-mb">
+        <div class="container h-60 md:h-80 lg:h-[420px]">
+          <div
+            class="h-full pl-4 pb-3 md:pl-9 md:pb-8 lg:pl-[52px] lg:pb-12 flex items-end bg-banner bg-center bg-cover bg-no-repeat"
+          >
+            <h3
+              class="text-white text-2xl leading-9 lg:text-[32px] lg:leading-[45px]"
+            >
+              窩窩家居<br />跟您一起品味生活
+            </h3>
+          </div>
+        </div>
+      </section>
+      <section class="section-mb">
+        <div class="container">
+          <h2 class="h2-text">床墊優勢</h2>
+          <ul class="flex gap-[30px] flex-wrap lg:flex-nowrap justify-center">
+            <li class="w-full md:w-7/12 lg:w-full">
+              <img
+                class="w-full"
+                src="./src/img/log-friendly.png"
+                alt="log-friendly"
+              />
+              <h4 class="h4-text">原木料環保</h4>
+            </li>
+            <li class="w-full md:w-5/12 lg:w-full">
+              <img class="w-full" src="./src/img/storage.png" alt="storage" />
+              <h4 class="h4-text">好收納</h4>
+            </li>
+            <li class="w-full md:w-5/12 lg:w-full">
+              <img class="w-full" src="./src/img/build-up.png" alt="build-up" />
+              <h4 class="h4-text">好組裝</h4>
+            </li>
+          </ul>
+        </div>
+      </section>
+    </main>
   </body>
 </html>
